refactor: 전체 리팩터링